--- a/bertrand/templates/bertrand/examples_3_firms.html
+++ b/bertrand/templates/bertrand/examples_3_firms.html
@@ -4,7 +4,7 @@
 <b>Beispiel 1:</b>
 Firma A setzt einen Preis von 3 Taler, Firma B setzt einen Preis von 3 Taler, Firma C setzt einen Preis von 4 Taler.
 Somit haben Firma A und B gemeinsam den niedrigsten Preis gesetzt.
-Firma A und B verkaufen beide die gleiche Anzahl an Produkten, beide Firmen haben jeweils 30 Kunden und bekommen damit den gleichen Gewinn von 90 Talern.
+Firma A und B verkaufen beide die gleiche Anzahl an Produkten. Beide Firmen haben jeweils 30 Kunden und bekommen damit den gleichen Gewinn von 90 Talern.
 Firma C verkauft nichts und hat einen Gewinn von 0 Taler.<br><br>
     <table class="table">
         <tr align="center">
@@ -30,7 +30,7 @@ Firma C verkauft nichts und hat einen Gewinn von 0 Taler.<br><br>
     </table>
 <br><br>
 <b>Beispiel 2:</b>
-Firma A setzt einen Preis von 2 Taler Firma B setzt einen Preis von 2 Taler,
+Firma A setzt einen Preis von 2 Taler, Firma B setzt einen Preis von 2 Taler,
 Firma C setzt einen Preis von 2 Taler. Somit haben Firma A, B und C gemeinsam den niedrigsten Preis gesetzt.
 Sie verkaufen alle die gleiche Anzahl an Produkten (jeweils 20) und bekommen damit den gleichen Gewinn von 40 Talern.<br><br>
     <table class="table">
