--- a/bertrand/templates/bertrand/instructions_main.html
+++ b/bertrand/templates/bertrand/instructions_main.html
@@ -19,10 +19,10 @@
     Diese Firma wird von einer anderen Experimentteilnehmerinnen bzw. einem Experimentteilnehmer repräsentiert.
     {% else %}
     In jedem Markt verkaufen zwei weitere Firmen das gleiche Produkt wie Sie.
-    Diese Firmen werden von zwei anderen Experimentteilnehmerinnen bzw. Experiment-Teilnehmer repräsentiert
+    Diese Firmen werden von zwei anderen Experimentteilnehmerinnen bzw. Experiment-Teilnehmern repräsentiert
     {% endif %}
     Alle Firmen bieten {{Constants.m_consumer}} Einheiten des vergleichbaren Produktes an.
-    Bei der Produktion des Produktes entstehen für die Firma keine Kosten.
+    Bei der Produktion des Produktes entstehen für die Firmen keine Kosten.
     Das Spiel hat mehrere Runden, wobei die genau Anzahl durch einen Zufallsmechanismus entschieden wird.
     Sie spielen das Spiel für drei Durchgänge.
     {% if n_players == 2%}
