--- a/bertrand/templates/bertrand/instructions_procedure.html
+++ b/bertrand/templates/bertrand/instructions_procedure.html
@@ -8,7 +8,7 @@
       {% if n_players == 2%}
       derselben Teilnehmerin bzw. demselben Teilnehmer.
       {% else %}
-      mit denselben Teilnehmern bzw. Teilnehmerinnen.
+      denselben Teilnehmern bzw. Teilnehmerinnen.
       {% endif %}
     </p>
     <p>
